unpackaged/objects/Call_Report__c.object
<CustomObject>
  <fields>
    <fullName>Products_discussed_REST__c</fullName>
    <description>SBU: Restorative, Countries: All - Used for call reporting of products. Controlled by VF to show on page layout if SBU= Restorative</description>
    <label>Products discussed (REST)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Assigned_To_User_Country__c</controllingField>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Alginate ZH</fullName>
        </value>
        <value>
          <fullName>Amalgam</fullName>
        </value>
        <value>
          <fullName>Aquasil</fullName>
        </value>
        <value>
          <fullName>Aquasil Codeless</fullName>
        </value>
        <value>
          <fullName>Aquasil Ultra</fullName>
        </value>
        <value>
          <fullName>Bite ZH</fullName>
        </value>
        <value>
          <fullName>BLOCCHETTI CAD/CAM</fullName>
        </value>
        <value>
          <fullName>Bonding</fullName>
        </value>
        <value>
          <fullName>Burs</fullName>
        </value>
        <value>
          <fullName>Calibra</fullName>
        </value>
        <value>
          <fullName>Calibra Cements</fullName>
        </value>
        <value>
          <fullName>Catalog of Restodontics</fullName>
        </value>
        <value>
          <fullName>Celtra Duo</fullName>
        </value>
        <value>
          <fullName>Cements</fullName>
        </value>
        <value>
          <fullName>Ceram.x Spectra ST Effects</fullName>
        </value>
        <value>
          <fullName>Ceram.x Spectra ST Flow</fullName>
        </value>
        <value>
          <fullName>Ceram.x Spectra ST HV/LV</fullName>
        </value>
        <value>
          <fullName>Ceram.X UNIVERSAL</fullName>
        </value>
        <value>
          <fullName>CERAM X MONO/UNIVERSAL</fullName>
        </value>
        <value>
          <fullName>CEREC MTL</fullName>
        </value>
        <value>
          <fullName>Class II</fullName>
        </value>
        <value>
          <fullName>Composites</fullName>
        </value>
        <value>
          <fullName>CONSERVATIVA</fullName>
        </value>
        <value>
          <fullName>Core&amp;Post</fullName>
        </value>
        <value>
          <fullName>Curing Lights</fullName>
        </value>
        <value>
          <fullName>Duomix</fullName>
        </value>
        <value>
          <fullName>Dyract</fullName>
        </value>
        <value>
          <fullName>Dyract extra</fullName>
        </value>
        <value>
          <fullName>Elite HD</fullName>
        </value>
        <value>
          <fullName>Enhance</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Products_discussed_TRCE__c</fullName>
    <label>Products discussed (TRCE)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Assigned_To_User_Country__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Hygiene</fullName>
        </value>
        <value>
          <fullName>Instruments</fullName>
        </value>
        <value>
          <fullName>intego</fullName>
          <label>Intego</label>
        </value>
        <value>
          <fullName>INTEGO Ambidextrous</fullName>
        </value>
        <value>
          <fullName>Intego Pro</fullName>
        </value>
        <value>
          <fullName>INTEGO PRO Ambidextrous</fullName>
        </value>
        <value>
          <fullName>Intego Pro CS</fullName>
        </value>
        <value>
          <fullName>Intego Pro TS</fullName>
        </value>
        <value>
          <fullName>Intego Pro Turn</fullName>
        </value>
        <value>
          <fullName>SIM UNITS</fullName>
        </value>
        <value>
          <fullName>Sinius</fullName>
        </value>
        <value>
          <fullName>Sinius CS</fullName>
        </value>
        <value>
          <fullName>Sinius TS</fullName>
        </value>
        <value>
          <fullName>Teneo</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SFE_Type__c</fullName>
    <description>This field has been created for SFE purposes in Japan</description>
    <inlineHelpText>Please specify the SFE Type of your Event</inlineHelpText>
    <label>SFE Type</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Assigned_To_User_Country__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>No SFE</fullName>
        </value>
        <value>
          <fullName>SFE Lead</fullName>
        </value>
        <value>
          <fullName>SFE CEREC</fullName>
        </value>
        <value>
          <fullName>SFE Imaging</fullName>
        </value>
        <value>
          <fullName>SFE TC</fullName>
        </value>
        <value>
          <fullName>SFE Implants</fullName>
        </value>
        <value>
          <fullName>SFE Consumables</fullName>
        </value>
        <value>
          <fullName>SFE Ortho</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SIMPLANT_Hardware__c</fullName>
    <formula>INCLUDES( Products_discussed_IMPL__c , "SIMPLANT Hardware")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIMPLANT Hardware</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SIMPLANT_Software__c</fullName>
    <formula>INCLUDES( Products_discussed_IMPL__c , "SIMPLANT Software")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIMPLANT Software</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>StartDateTime__c</fullName>
    <description>200324 test start datetime field to be used to populate Event.StartDateTime</description>
    <label>Start</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Subject__c</fullName>
    <description>TFUS-000002466</description>
    <inlineHelpText>Leave the subject blank to have Salesforce use your default subject</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Symbios__c</fullName>
    <formula>INCLUDES( Products_discussed_IMPL__c , "Symbios")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Symbios</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>WeldOne__c</fullName>
    <formula>INCLUDES( Products_discussed_IMPL__c , "WeldOne")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WeldOne</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>XiVE__c</fullName>
    <formula>INCLUDES( Products_discussed_IMPL__c , "XiVE")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XiVE</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>track_event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>can be used to track events individually by country</description>
    <inlineHelpText>check the box if you want to track this event</inlineHelpText>
    <label>track event</label>
    <type>Checkbox</type>
  </fields>
  <label>Call Report</label>
  <nameField>
    <displayFormat>CR-{0000}</displayFormat>
    <label>Call Report Number</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Call Reports</pluralLabel>
  <recordTypes>
    <active>true</active>
    <description>CFE 2.0 - should be set as default record type for CFE 2.0 users.</description>
    <fullName>Call_Report_CFE_2_0</fullName>
    <label>Call Report CFE 2.0</label>
  </recordTypes>
  <sharingModel>ReadWrite</sharingModel>
  <validationRules>
    <fullName>Product_Group_Empty</fullName>
    <active>false</active>
    <description>Test validation rule</description>
    <errorConditionFormula>ISBLANK(ProductGroup__c )</errorConditionFormula>
    <errorMessage>You need to select at least one Product Group</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>StartDateTime_AFTER_EndDateTime</fullName>
    <active>true</active>
    <description>CFE 2.0 - Validate that start date is before end date.</description>
    <errorConditionFormula>StartDateTime__c &gt;  EndDateTime__c</errorConditionFormula>
    <errorMessage>End time must be after the start</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>StartDateTime_IN_FUTURE</fullName>
    <active>true</active>
    <description>CFE 2.0 - Start date cannot be set to the future, since we are reporting on a completed event.</description>
    <errorConditionFormula>StartDateTime__c &gt; NOW()</errorConditionFormula>
    <errorDisplayField>StartDateTime__c</errorDisplayField>
    <errorMessage>Please select a date and time in the past.</errorMessage>
  </validationRules>
</CustomObject>